#pragma once

class Jump {
public:
    int start;
    int end;

    Jump() : start(0), end(0) {}

    //getters and setters
};
